<resources>
    <string name="app_name">To Do List</string>

    <string name="hint_title">Title...</string>
    <string name="hint_description">Description...</string>
    <string name="button_create_task">Create Task</string>

    <!--Gerado automáticamente-->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Descrições e amostras-->
    <string name="done_icon">Done Icon</string>
    <string name="archive_icon">Archive Icon</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="restore_icon">Restore Icon</string>

    <string name="sample_task_title">Sample Task Title</string>
    <string name="sample_task_big_title">Sample Task Big Title with a much number of letters and words</string>

    <!--BottomNavigationView titles-->
    <string name="create">Create</string>
    <string name="completed">Completed</string>
    <string name="home">Home</string>
    <string name="archived">Archived</string>
    <string name="trash">Trash</string>
    <string name="cancel">Cancel</string>
    <string name="update_task">Update task</string>
</resources>
