<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuCreate"
        android:title="@string/create"
        android:icon="@drawable/ic_add_box_black_24dp">

    </item>

    <item
        android:id="@+id/menuCompleted"
        android:title="@string/completed"
        android:icon="@drawable/ic_check_box_black_24dp">

    </item>

    <item
        android:id="@+id/menuHome"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp">

    </item>

    <item
        android:id="@+id/menuArchived"
        android:title="@string/archived"
        android:icon="@drawable/ic_archive_black_24dp">

    </item>

    <item
        android:id="@+id/menuTrash"
        android:title="@string/trash"
        android:icon="@drawable/ic_delete_black_24dp">

    </item>

</menu>