<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CreateTask">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title"
            android:inputType="text"
            android:autofillHints="@string/hint_title"
            />

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/hint_description"
            android:hint="@string/hint_description"
            android:inputType="textMultiLine"
            android:lines="10"
            android:maxLines="20"
            android:minLines="1"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/buttonCreateTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_create_task" />

    </LinearLayout>


</FrameLayout>