<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"

    app:cardBackgroundColor="#DDDDDD"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="16dp"
    app:contentPadding="10dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/completed_task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_task_title"
            android:maxWidth="250dp"
            android:textSize="18sp"
            android:layout_marginStart="15dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_alignParentEnd="true">

            <ImageView
                android:id="@+id/completed_button_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check_box_black_24dp"
                android:contentDescription="@string/done_icon"
                android:layout_marginStart="15dp" />

            <ImageView
                android:id="@+id/completed_button_archive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_archive_black_24dp"
                android:contentDescription="@string/archive_icon"
                android:layout_marginStart="15dp" />

            <ImageView
                android:id="@+id/completed_button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete_black_24dp"
                android:contentDescription="@string/delete_icon"
                android:layout_marginStart="15dp" />
        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>